...
        android:layout_gravity="center_vertical"
        android:layout_weight="1"
        android:textColor="@color/colorPrimary"
        tools:text="Name" />

    <ImageButton
        android:id="@+id/item_usersList_btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/contentDesc_deleteUser"
        android:gravity="end"
        android:padding="@dimen/item_userList_padding"
...
