...
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.komnacki.sportresultstracker.usersActivity.UsersListActivity"
    tools:showIn="@layout/activity_users_list">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_usersList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        tools:listitem="@layout/item_users_list">
    </android.support.v7.widget.RecyclerView>

...
        android:id="@+id/empty_usersList"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/ic_empty_usersList"
            android:layout_width="@dimen/ic_emptyList"
            android:layout_height="@dimen/ic_emptyList"
            android:layout_centerInParent="true"
            android:contentDescription="@string/empty_usersList_contentDescription"
            android:src="@drawable/ic_empty_list_light" />

...
